# cgns-tools

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE.txt
cli/: CMakeLists.txt
cli/src/: main.cpp
cmake/: FindCGNS.cmake
include/: aux.hpp  cgns.hpp  logger.hpp
lib/: CMakeLists.txt
lib/include/: aux.hpp  cgns-tools.hpp
lib/src/: cgns-tools.cpp
pythonInterface/: CMakeLists.txt
pythonInterface/src/: module.cpp
pythonInterface/tests/: test.py
src/: cgns.cpp
